--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.21",
+    "multer": "^1.4.2",
+    "sharp": "^0.26.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
